--- a/payloads/LinuxBusyBox.yml
+++ b/payloads/LinuxBusyBox.yml
@@ -4,6 +4,7 @@ repo_url: "https://gitlab.com/coreboot/buildroot"
 version: "1.3.1"
 filename: "bzImage"
 filename2: "busybox-1.31-rootfs.cpio.xz"
+license: "GPLv2"
 cbfstool_args:
         - "-f"
         - "%PAYLOAD%"
