--- a/payloads/LinuxUrootKexecAARCH64.yml
+++ b/payloads/LinuxUrootKexecAARCH64.yml
@@ -1,9 +1,10 @@
-name: "LinuxBoot u-root kexec AARCH64"
+name: "LinuxBoot u-root kexec"
 commithash: "?"
 repo_url: "https://github.com/u-root/u-root"
 version: "v6.0.0"
 filename: "qemu-aarch64-virt-uImage"
 license: "BSD 3clause"
+arch: "aarch64"
 cbfstool_args:
         - "-f"
         - "%PAYLOAD%"
