--- a/payloads/LinuxKexec.yml
+++ b/payloads/LinuxKexec.yml
@@ -1,9 +1,14 @@
-name: "LinuxBusyBox"
+name: "LinuxBoot BusyBox kexec"
 commithash: "fb154c56c2c0aa483a109b3d19ebbf0aa777ab24"
 repo_url: "https://gitlab.com/coreboot/buildroot"
 version: "1.3.1"
 filename: "bzImage_kexec_net"
 filename2: "busybox-1.31-rootfs_kexec.x86_64.cpio.xz"
+kernel_image: https://blobs.9esec.io/os/nightly/vmlinuz-5.5.17-200.fc31.x86_64
+kernel_type: zimage
+ramdisk_image: https://blobs.9esec.io/os/nightly/initramfs-5.5.17-200.fc31.x86_64.img
+ramdisk_compression: xz
+dtb_image: https://blobs.9esec.io/os/nightly/live-rootfs.squashfs.img
 license: "GPLv2"
 cbfstool_args:
         - "-f"
@@ -14,6 +19,7 @@ cbfstool_args:
         - "%INITRD%"
 whitelist:
         - "CONFIG_ARCH_X86=y"
+        - "CONFIG_TTYS0_BASE=0x3f8"
         - "LAVA_DISKLESS"
 blacklist:
         - "CONFIG_GDB_WAIT=y"
