--- a/payloads/LinuxUrootKexecAARCH64.yml
+++ b/payloads/LinuxUrootKexecAARCH64.yml
@@ -19,3 +19,5 @@ blacklist:
 harddisk_image: "https://blobs.9esec.io/os/Fedora-Minimal-31-1.9.aarch64.raw.xz"
 harddisk_image_compression: "xz"
 harddisk_image_os: fedora
+tags:
+        - "KEXEC"
