--- a/payloads/tianocore.yml
+++ b/payloads/tianocore.yml
@@ -20,3 +20,5 @@ blacklist:
 harddisk_image: "https://blobs.9esec.io/os/Fedora-HWT-disk-30-minimal-EFI.img.xz"
 harddisk_image_compression: "xz"
 harddisk_image_os: fedora
+tags:
+        - "HARDDISK_GPT"
