--- a/payloads/LinuxUrootKexecAARCH64.yml
+++ b/payloads/LinuxUrootKexecAARCH64.yml
@@ -16,7 +16,7 @@ whitelist:
         - "CONFIG_PAYLOAD_FIT_SUPPORT=y"
 blacklist:
         - "CONFIG_GDB_WAIT=y"
-harddisk_image: "https://blobs.9esec.io/os/Fedora-Minimal-31-1.9.aarch64.raw.xz"
+harddisk_image: "http://blobs.9esec.io/os/Fedora-Minimal-31-1.9.aarch64.raw.xz"
 harddisk_image_compression: "xz"
 harddisk_image_os: fedora
 tags:
