--- a/payloads/LinuxKexec.yml
+++ b/payloads/LinuxKexec.yml
@@ -4,11 +4,11 @@ repo_url: "https://gitlab.com/coreboot/buildroot"
 version: "1.3.1"
 filename: "bzImage_kexec_net"
 filename2: "busybox-1.31-rootfs_kexec.x86_64.cpio.xz"
-kernel_image: http://blobs.9esec.io/os/nightly/vmlinuz-5.5.17-200.fc31.x86_64
+kernel_image: http://blobs.9esec.io/os/vmlinuz-5.5.17-200.fc31.x86_64
 kernel_type: zimage
-ramdisk_image: http://blobs.9esec.io/os/nightly/initramfs-5.5.17-200.fc31.x86_64.img
+ramdisk_image: http://blobs.9esec.io/os/initramfs-5.5.17-200.fc31.x86_64.img
 ramdisk_compression: xz
-dtb_image: http://blobs.9esec.io/os/nightly/live-rootfs.squashfs.img
+dtb_image: http://blobs.9esec.io/os/live-rootfs.squashfs.img
 license: "GPLv2"
 cbfstool_args:
         - "-f"
