payloads: Shorten the payload name
This will improve readability in the UI.

Signed-off-by: Patrick Rudolph <patrick.rudolph@9elements.com>

--- a/payloads/LinuxKexec-ttyS0.yml
+++ b/payloads/LinuxKexec-ttyS0.yml
@@ -1,4 +1,4 @@
-name: "LinuxBoot BusyBox kexec"
+name: "LinuxBoot BB kexec"
 commithash: "fb154c56c2c0aa483a109b3d19ebbf0aa777ab24"
 repo_url: "https://gitlab.com/coreboot/buildroot"
 version: "1.3.1"
